# g4f-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  docker-compose.yaml  fly.toml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: workflow.yaml
backend/: __init__.py  adapters.py  background.py  dependencies.py  errors.py  models.py  routes.py  run.py  settings.py
static/: index.html  messages.html  script.js  style.css
tests/: conftest.py  test_api.py
