[project]
name = "g4f-api"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.12",
    "fastapi-utils==0.8.0",
    "g4f[all]==0.5.5.5",
    "pydantic-settings==2.9.1",
    "pydantic==2.11.5",
    "hypercorn==0.17.3",
    "jinja2==3.1.6",
    "curl-cffi==0.11.4",
    "typing-inspect==0.9.0",
    "aiohttp-socks==0.10.1",
    "browser-cookie3==0.20.1",
    "nodriver==0.46.1",
    "requests==2.32.4",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.4.1",
    "pytest-xdist==3.7.0",
    "ruff==0.12.0",
]

[tool.uv]
package = false
